# libbdz

./: .gitignore  README.md  pyproject.toml
src/libbdz/codebase/: __init__.py  linecounter.py
src/libbdz/gphotos/: __init__.py
src/libbdz/imgprocessor/: __init__.py  stitch.py
src/libbdz/startup/: __init__.py
src/libbdz/tasks/: __init__.py  fileorganizer.py
src/libbdz/ui/: __init__.py  cli.py  md_reports.py
